Ordering, Payment and Delivery core completed
The execution flow works as expected. Still some minor todos to investigate.